force-app/main/default/objects/abd_Submissions_Global__c/abd_Submissions_Global__c.object-meta.xml
<CustomObject>
    <description>Global table that contains information regarding license submissions.</description>
    <label>Submissions</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>