force-app/main/default/objects/abd_Submissions_Global__c/fields/abd_Active__c.field-meta.xml
<CustomField>
    <fullName>abd_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>