force-app/main/default/objects/abd_Submissions_Global__c/fields/abd_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Application_Type__c</fullName>
    <label>Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Application_Type</valueSetName>
    </valueSet>
</CustomField>