force-app/main/default/objects/abd_Submissions_Global__c/fields/abd_Application_Type_old__c.field-meta.xml
<CustomField>
    <fullName>abd_Application_Type_old__c</fullName>
    <label>z-Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New License</fullName>
            </value>
            <value>
                <fullName>Renew License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>