force-app/main/default/objects/abd_Submissions_Global__c/fields/abd_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>abd_Help_Text__c</fullName>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>