force-app/main/default/objects/abd_Submissions_Global__c/fields/abd_Length__c.field-meta.xml
<CustomField>
    <fullName>abd_Length__c</fullName>
    <label>Length</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>8 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>14 days</fullName>
            </value>
            <value>
                <fullName>5 days</fullName>
            </value>
            <value>
                <fullName>36 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>