force-app/main/default/objects/abd_Submissions_Global__c/fields/abd_Required__c.field-meta.xml
<CustomField>
    <fullName>abd_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>