force-app/main/default/objects/abd_Submissions_Global__c/fields/abd_Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Submission_Type__c</fullName>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Tax Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>