force-app/main/default/objects/abd_Submissions_Global__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>abd_Length__c</columns>
    <columns>abd_Application_Type_old__c</columns>
    <columns>abd_Application_Type__c</columns>
    <columns>abd_Submission_Type__c</columns>
    <columns>abd_License_Type__c</columns>
    <columns>abd_Required__c</columns>
    <columns>abd_Active__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>